# rust-study

./: .gitmodules  README.md  README_boqin.txt  final_readme_yilun.txt  readme.txt
apps_detected_uaf/: README.md
apps_detected_uaf/relibc/core_io/: .gitignore  build-src.sh  doc.sh  edit-patches.sh  mapping.rs  publish.sh
apps_detected_uaf/relibc/posix-regex/: README.md
apps_detected_uaf/relibc/pthreads-emb/: cleanup.c  create.c  global.c  pte_is_attr.c  pte_mutex_check_need_init.c  pte_relmillisecs.c  pte_reuse.c  pte_threadDestroy.c  pte_threadStart.c  pte_types.h  pthread_attr_getdetachstate.c  pthread_attr_getschedparam.c  pthread_attr_getstacksize.c  pthread_attr_setdetachstate.c  pthread_barrier_destroy.c  pthread_barrier_init.c  pthread_barrierattr_init.c  pthread_barrierattr_setpshared.c  pthread_cancel.c  pthread_cond_destroy.c  pthread_cond_init.c  pthread_cond_signal.c  pthread_cond_wait.c  pthread_condattr_destroy.c  pthread_condattr_getclock.c  pthread_condattr_getpshared.c  pthread_condattr_setpshared.c  pthread_detach.c  pthread_getconcurrency.c  pthread_getschedparam.c  pthread_key_create.c  pthread_key_delete.c  pthread_mutex_destroy.c  pthread_mutex_unlock.c  pthread_mutexattr_destroy.c  pthread_mutexattr_getkind_np.c  pthread_mutexattr_gettype.c  pthread_mutexattr_setkind_np.c  pthread_num_processors_np.c  (+28 more)
apps_detected_uaf/relibc_mir_detected_bugs/: rustc.header-netdb-gethostbyaddr.003-027.PreCodegen.after.mir
concurrency-bugs/double-lock/: non-deadlock2.rs
concurrency-bugs/rayon-449/: Cargo.toml
concurrency-bugs/tikv-539/: buggy.rs
concurrency-bugs/toy-servo-12639/: poison.rs
concurrency-bugs/transmute/: main
micro-benchmarks/: README.md
micro-benchmarks/global-variable/: Cargo.toml
micro-benchmarks/mem-copy/: Cargo.toml
micro-benchmarks/ptr-add/: Cargo.toml
micro-benchmarks/ptr-offset/: Cargo.toml
micro-benchmarks/unsafe-safe-comp-yilun/: Cargo.toml
reproduced_memory_bugs/: README.md
section-2-background-and-related-work/Figure-1/: README.md  data_rust_history.tab  plot_Figure_1.sh  plot_rust_histories.pl
section-2-background-and-related-work/Figure-2/: README.md  data_bugs_date.tab  plot_Figure_2.sh  plot_bugs_date.pl
section-4/: README.md  count_unsafe.py
section-4-unsafe-usage/unsafe-statisitcs/: README.md
section-4-unsafe-usages/section-4-1-reasons-of-usage/: README.md  run_all.sh
section-4-unsafe-usages/unsafe-statisitcs/: README.md
section-4/benchmark/redox/bootloader-efi/: Cargo.toml  LICENSE  Makefile  README.md
section-4/benchmark/redox/bootloader-efi/src/: lib.rs
section-4/benchmark/redox/bootloader-efi/src/app/: memory_map.rs  mod.rs  paging.rs  partitions.rs  vesa.rs
section-4/benchmark/redox/bootloader-efi/src/app/redoxfs/: disk.rs  extent.rs  filesystem.rs  header.rs  mod.rs  node.rs
section-4/benchmark/redox/cookbook/patches/platform-info/: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
section-4/benchmark/redox/cookbook/patches/platform-info/ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
section-4/benchmark/redox/cookbook/patches/platform-info/src/: lib.rs  redox.rs  unix.rs  windows.rs
section-4/benchmark/redox/cookbook/patches/termsize/: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
section-4/benchmark/redox/cookbook/patches/termsize/examples/: ts.rs
section-4/benchmark/redox/cookbook/patches/termsize/src/: lib.rs  nix.rs  win.rs
section-4/benchmark/redox/cookbook/pkgutils/: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
section-4/benchmark/redox/cookbook/pkgutils/src/: database.rs  download.rs  lib.rs  package.rs  packagemeta.rs
section-4/benchmark/redox/cookbook/pkgutils/tests/: dependency_test.rs
section-4/benchmark/redox/cookbook/pkgutils/tests/common/: mod.rs
section-4/benchmark/redox/cookbook/pkgutils/tests/test_db/etc/pkg.d/pkglist/: pkg1.toml  pkg2.toml  pkg3.toml  pkg4.toml
section-4/benchmark/redox/installer/: .gitignore  Cargo.toml  README.md
section-4/benchmark/redox/installer/config/: default.toml  minimal.toml
section-4/benchmark/redox/installer/src/: lib.rs
section-4/benchmark/redox/installer/src/config/: file.rs  general.rs  mod.rs  package.rs  user.rs
section-4/benchmark/redox/kernel/slab_allocator/: .directory  Cargo.toml  LICENSE  README.md
section-4/benchmark/redox/kernel/slab_allocator/src/: lib.rs  slab.rs  test.rs
section-4/benchmark/redox/redoxfs/: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md
section-4/benchmark/redox/redoxfs/src/: archive.rs  ex_node.rs  extent.rs  filesystem.rs  header.rs  lib.rs  node.rs  tests.rs
section-4/benchmark/redox/redoxfs/src/disk/: cache.rs  file.rs  mod.rs  sparse.rs
section-4/benchmark/redox/redoxfs/src/mount/: fuse.rs  mod.rs
section-4/benchmark/redox/redoxfs/src/mount/redox/: mod.rs  resource.rs  scheme.rs
section-4/benchmark/redox/relibc/posix-regex/: .gitlab-ci.yml  Cargo.toml
section-6-1/: README.md
section-6-1/ManualDropPrinter/: CMakeLists.txt
section-6-1/ManualDropPrinter/include/PrintManualDrop/: PrintManualDrop.h
section-6-1/ManualDropPrinter/lib/: CMakeLists.txt
section-6-1/ManualDropPrinter/lib/Common/: CMakeLists.txt
section-6-1/ManualDropPrinter/lib/PrintManualDrop/: PrintManualDrop.cpp
section-6-thread-safety-issues/reproduced_concurrency_bugs/: README.md
section-6-thread-safety-issues/section-6-1-blocking-bugs/: README.md  final_result.txt  parse_manual_drop_log.py  run_all.sh
section-6-thread-safety-issues/section-6-1-blocking-bugs/ManualDropPrinter/lib/PrintManualDrop/: CMakeLists.txt
section-6-thread-safety-issues/section-6-1-manually-drop/: README.md  run.sh
section-7-1/: function.py  variable.py
section-7-1/sample_mir/: sample.PreCodegen.after.mir
section-7-2/: run.sh
section-7-bug-detection/applications/: README.md
section-7-bug-detection/double-lock-detector/: README.md
section-7-bug-detection/section-7.1-detecting-memory-bugs/: run_uaf_detector.sh
section-7-bug-detection/use-after-free-detector/: line_parser.py  main.py  statement_parser.py
(+461 files in other folders)
