[package]
name = "redox_installer"
version = "0.2.6"
description = "A Redox filesystem builder"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/installer"
default-run = "redox_installer"

[[bin]]
name = "redox_installer"
path = "src/bin/installer.rs"

[[bin]]
name = "redox_installer_tui"
path = "src/bin/installer_tui.rs"

[lib]
name = "redox_installer"
path = "src/lib.rs"

[dependencies]
arg_parser = "0.1.0"
redox_liner = "0.5.1"
libc = "0.2.66"
failure = "0.1.6"
rand = "0.7.3"
redox_pkgutils = "0.1.5"
redoxfs = "0.4.0"
rust-argon2 = "0.6.1"
serde = "1.0.104"
serde_derive = "1.0.104"
termion = "1.5.4"
toml = "0.5.6"
