[package]
name = "redoxfs"
description = "The Redox Filesystem"
repository = "https://gitlab.redox-os.org/redox-os/redoxfs"
version = "0.4.0"
license-file = "LICENSE"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[lib]
name = "redoxfs"
path = "src/lib.rs"

[[bin]]
name = "redoxfs"
path = "src/bin/mount.rs"
doc = false

[[bin]]
name = "redoxfs-ar"
path = "src/bin/ar.rs"
doc = false

[[bin]]
name = "redoxfs-mkfs"
path = "src/bin/mkfs.rs"
doc = false

[dependencies]
redox_syscall = "0.1"
uuid = { version = "0.5", features = ["v4"] }

[target.'cfg(not(target_os = "redox"))'.dependencies]
fuse = "0.3"
libc = "0.2"
time = "0.1"
