[package]
name = "redox_pkgutils"
version = "0.1.5"
description = "Redox Packaging Utilities"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgutils"
build = "build.rs"
edition = "2018"

[lib]
name = "pkgutils"
path = "src/lib.rs"

[[bin]]
name = "pkg"
path = "src/bin/pkg.rs"

[dependencies]
clap = {version = "2.25", default-features = false}
hyper-rustls = "0.6"
libflate = "0.1.4"
redox_liner = "0.5.1"
pbr = "1.0"
serde = "1.0"
serde_derive = "1.0"
sha3 = "0.8.2"
tar = "0.4"
toml = "0.4"
version-compare = "0.0.10"
petgraph = "0.4.5"
bidir-map = "0.6.0"
ordermap = "0.2.11"

[dependencies.hyper]
version = "0.10"
default-features = false
